--- a/main.html
+++ b/main.html
@@ -1,9 +1,16 @@
 <!DOCTYPE HTML>
 <html>
+<script src="https://aframe.io/releases/0.3.2/aframe.min.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 <head>
-<title>A-Frame Project</title>
+  <title>A-Frame Project</title>
+  <h1>A-Frame Project</h1>
 </head>
 <body>
+  <a-scene>
+      <a-box color="#6173F4" opacity="0.8" depth="2"></a-box>
+      <a-sphere radius="2" src="texture.png" position="1 1 0"></a-sphere>
+      <a-sky color="#ECECEC"></a-sky>
+    </a-scene>
 </body>
 </html>
